Fix issue with overflow and alignment of extract frame

--- a/src/content-scripts/framestyles.css
+++ b/src/content-scripts/framestyles.css
@@ -16,6 +16,8 @@
   top: 0;
   z-index: 1;
   display: none;
+  overflow: hidden;
+  text-align: left;
 }
 
 :root .m-extract-frame.m-decrypt {
